# plant-simulation-lib

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  PLANT_CONFIG_SPEC.md  pyproject.toml
PlantsimBackend/: config.py  main.py
PlantsimBackend/Backend/: Builder.py
PlantsimBackend/Simulations/: Simulator.py
PlantsimBackend/entities/: Conveyor.py  Drain.py  Source.py  Station.py
src/sim/: __init__.py  builder.py  simulation.py
src/sim/entities/: abc.py  conveyor.py  drain.py  router.py  source.py  station.py  store.py
tests/: test_builder.py
tests/sample_configs/: basic_plant.json  full_plant.json  invalid_bad_connection.json  invalid_duplicate_name.json  invalid_producer.json
