[project]
name = "sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anand2312", email = "40204976+anand2312@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "simpy>=4.1.1",
]

[project.scripts]
sim = "sim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
